# Pong

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  client.py  example.js  fly.toml
pong-web/: package-lock.json  package.json  svelte.config.js
pong-web/src/: app.css  app.html
pong-web/src/lib/: api.ts  messages.ts
pong-web/src/lib/components/: BouncingBall.svelte  Game.svelte  GameCanvas.svelte  Lobby.svelte  OfflineGame.svelte  Register.svelte
pong-web/src/routes/: +page.svelte  +page.ts
src/: main.rs
src/gameplay/: background.rs  game.rs  game_datalayer.rs  mod.rs
src/gameplay/game/: ball.rs  base.rs  countdown.rs  fps_guard.rs  mod.rs  score.rs
src/matchmaking/: mod.rs  mutex_queue.rs  queue.rs  queue_up_api.rs  rpc_queue.rs
src/network/: initializer.rs  messages.rs  mod.rs  session.rs  tcp.rs  websocket.rs
src/new_matchmaking/: background_match_finder.rs  backgroung.rs  datalayer.rs  mod.rs  rpc_datalayer.rs
src/runner/: initializer.rs  messages.rs  mod.rs  session.rs  tcp.rs
src/utils/: events.rs  mod.rs  rpc.rs
